--- a/assets/css/book_shelf_style.css
+++ b/assets/css/book_shelf_style.css
@@ -4576,7 +4576,7 @@ input[type="button"].btn-block {
   list-style: none;
 }
 
-.page-link {
+.page-link , .pagenat_routes .page-numbers {
   position: relative;
   display: block;
   padding: 0.5rem 0.75rem;
@@ -4605,7 +4605,7 @@ input[type="button"].btn-block {
   margin-left: 0;
 }
 
-.page-item.active .page-link {
+.page-item.active .page-link , .pagenat_routes  .page-numbers.current {
   z-index: 3;
   color: #fff;
   background-color: #D19C97;
@@ -9591,7 +9591,7 @@ a.text-dark:hover, a.text-dark:focus {
          .modal {
          display: none; /* Hidden by default */
          position: fixed; /* Stay in place */
-         z-index: 1; /* Sit on top */
+         z-index: 999; /* Sit on top */
          left: 0;
          top: 0;
          width: 100%; /* Full width */
@@ -9644,3 +9644,13 @@ a.text-dark:hover, a.text-dark:focus {
          color: #fff;
          padding: 5px 13px;
          border-radius: 4px;}
+
+         .row-collection {
+          background: #eee;
+          border-radius: 5px;
+          padding: 30px;
+          margin: 10px 0;
+      }
+      h6{
+        text-transform: initial;
+      }
